# ytnichefindduman

github_paketi/: 01_kurulum.bat  02_demo_calistir.bat  03_paneli_ac.bat  04_arastirma_calistir.bat  05_internetten_paylas.bat  06_kalici_yayin_rehberi_ac.bat  07_github_paketi_hazirla.bat  BASIT_KULLANIM.md  Dockerfile  GITHUB_YUKLEME_REHBERI.md  README.md  YAYINA_ALMA_REHBERI.md  app.py  pyproject.toml  render.yaml  requirements.txt
github_paketi/src/youtube_niche_researcher/: __init__.py  cli.py  demo.py  display.py  duration.py  exporters.py  language_filter.py  models.py  niche_extractor.py  pipeline.py  query_planner.py  report_generator.py  scoring.py  text_tools.py  youtube_api.py
github_paketi/tests/: test_duration.py  test_language_filter.py  test_scoring.py
