[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-niche-researcher"
version = "0.1.0"
description = "Faceless YouTube niche research assistant with API collection, scoring, and reports."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Local Codex Build" }]
dependencies = []

[project.optional-dependencies]
dashboard = ["streamlit>=1.34"]
dev = ["pytest>=8"]

[project.scripts]
ynr = "youtube_niche_researcher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

